[gd_scene load_steps=3 format=2]

[ext_resource path="res://Generics/Doors/GenericDoor.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 128, 128 )

[node name="Door" type="Node2D"]
script = ExtResource( 1 )

[node name="DoorArea2D" type="Area2D" parent="."]
monitorable = false
collision_layer = 2

[node name="DoorSprite" type="Sprite" parent="DoorArea2D"]

[node name="DoorCollisionShape" type="CollisionShape2D" parent="DoorArea2D"]
shape = SubResource( 1 )
[connection signal="body_entered" from="DoorArea2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DoorArea2D" to="." method="_on_Area2D_body_exited"]
